@@ -1,3 +1,9 @@
+2015-03-24  Giuseppe Scrivano  <gscrivan@redhat.com>
+
+	* src/cockroach.c (main): roach_wait doesn't return a status
+	anymore.
+	* src/roach.c (roach_wait): Wake up stopped processes.
+
 2015-03-21  Giuseppe Scrivano  <gscrivan@redhat.com>
 
 	* src/roach.c (roach_rot_process): Trace child processes too.
